--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^14.2.3",
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
+    "@uiw/react-md-editor": "^4.0.4",
     "highlight.js": "^11.9.0",
     "next": "14.2.3",
     "prismjs": "^1.29.0",
