--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-highlight": "^7.0.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "postcss": "^8",
