--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-transition-group": "^4.4.5",
     "rehype-highlight": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.4"
